# gpt_fastapi

./: Ngrok_FastAPI_OpenAI.ipynb  README.md  pyproject.toml
src/: main_ngrok.py
templates/: index.html
