[tool.poetry]
name = "gpt-fastapi"
version = "0.1.0"
description = ""
authors = ["takuyakato"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
openai = "^1.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
